<resources>
    <string name="app_name">金色星球</string>
    <string name="login_out_tips">再按一次退出程序</string>
    <string name="arena">竞技场</string>
    <string name="arena_period">竞技场第%s期</string>
    <string name="coin_mine">矿池</string>
    <string name="mine">我的</string>
    <string name="get_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="no_register_tip">未注册用户将自动创建账号登录</string>
    <string name="text_resend_verify_code">重新获取(%d s)</string>
    <string name="new_user_input_code">识别您为新用户，请输入邀请码</string>
    <string name="register">注册</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="input_invitate_code">请输入邀请码</string>
    <string name="win_price">恭喜您获得</string>
    <string name="current_bonus">本期奖金</string>
    <string name="sure">确认</string>
    <string name="text_wallet">我的钱包</string>
    <string name="text_space">领取空投</string>
    <string name="text_feedback">用户反馈</string>
    <string name="invitation_register">邀请注册</string>
    <string name="my_current_bet">我本期的投注</string>
    <string name="current_no_bet">本期未投注</string>
    <string name="next_period">下一期</string>
    <string name="price_rule_one">本期中奖号码将于10:00:00之后，约每半小时</string>
    <string name="detail_see">生成一个，详细参考</string>
    <string name="detail_see_two">本期已开奖，活动详细参考</string>
    <string name="arena_rule"><![CDATA[<竞技场规则>]]></string>
    <string name="choose_three_num">请选择三个号</string>
    <string name="sure_pay">确认支付</string>
    <string name="text_product_information">商品信息</string>
    <string name="choose_three_one">请选择一个号</string>
    <string name="bet_result">投注结果</string>
    <string name="bet">投注</string>
    <string name="done">完成</string>
    <string name="pay_fail">支付失败</string>
    <string name="no_balance">余额不足</string>
    <string name="day_login">每日登录</string>
    <string name="arena_activity">参与竞技场活动</string>
    <string name="join_activity">参与活动</string>
    <string name="mine_stone">矿石</string>
    <string name="velocity_factor">速度因子</string>
    <string name="accelerate">加速</string>

    <string name="camera">相机</string>
    <string name="file_choose">文件选择器</string>
    <string name="choose_file_not_more">选择的文件不能大于%sMB</string>
    <string name="need_leave_to_other">您需要离开%s前往其他应用吗？</string>
    <string name="leave">离开</string>
    <string name="tips">温馨提示</string>
    <string name="dialog_cancel">取消</string>
    <string name="my_wallet">我的钱包</string>
    <string name="bill">账单</string>
    <string name="withdraw">提现</string>
    <string name="address">地址</string>
    <string name="input_withdraw_address">请输入提现地址</string>
    <string name="coin_class">币种</string>
    <string name="amount">数量</string>
    <string name="can_use_balance">可用余额</string>
    <string name="fee">矿工费</string>
    <string name="withdraw_tip">请确认扣除矿工费后，有足够的余额提现</string>
    <string name="right_receive">立即领取</string>
    <string name="rule">规则</string>
    <string name="airdrop_rule_one">·持有平台币越多，将收获越多空投</string>
    <string name="airdrop_rule_two">·点击立即领取，将空投代币领取至我的钱包</string>
    <string name="airdrop_rule_three">·未领取的空投，将于每日23:59:59自动失效</string>
    <string name="no_airdrop_receive">暂无空投可领</string>
    <string name="next_airdrop_time">下一波空投时间:</string>
    <string name="feedback_hint">请简要描述您的问题和建议，您的反馈可以帮助我们进步</string>
    <string name="feedback">意见反馈</string>

    <string name="camera_roll">相机胶卷</string>
    <string name="pic_cancel">取消</string>
    <string name="pic_take_picture">拍摄</string>
    <string name="pic_preview">预览</string>
    <string name="pic_choose">请选择</string>
    <string name="pic_completed">已完成</string>
    <string name="pic_crop">裁剪</string>
    <string name="failed">失败</string>
    <string name="text_set">设置</string>
    <string name="login_out">退出登录</string>
    <string name="login_out_dialog">退出</string>
    <string name="login_out_flag">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="received">已领取</string>
    <string name="go_done">去完成</string>
    <string name="current_no_winner">很遗憾，您本期未中奖</string>
    <string name="no_award">暂未开奖</string>
    <string name="you_get_award">您获得%1$s,奖励为%2$s</string>
    <string name="grand_prize">特等奖</string>
    <string name="first_prize">一等奖</string>
    <string name="second_prize">二等奖</string>
    <string name="thrid_prize">三等奖</string>
    <string name="next">下一步</string>
    <string name="gamble_no">第%d期中奖号码</string>
    <string name="bet_result_tip">您的第%s期投注号码为</string>
    <string name="input_withdraw_amount">请输入提现金额</string>
    <string name="withdraw_success">提现成功</string>
    <string name="commit_success">提交成功</string>
    <string name="commit">提交</string>
    <string name="input_feedback_content">请输入反馈内容</string>
    <string name="no_start">未开始</string>
    <string name="confirming">确认中</string>
    <string name="confirmed">已确认</string>
    <string name="strategy">攻略</string>
    <string name="day">天</string>
</resources>

