<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            style="@style/textStyleMainColor"
            android:text="@string/pay_fail"
            android:padding="@dimen/size_dp_16"
            android:layout_gravity="center_horizontal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_dp_1"
            android:background="@color/line_color"/>

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_dp_50"
            app:srcCompat="@drawable/ic_pay_fail" />

        <TextView
            style="@style/textStyleMainColor"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_dp_30"
            android:text="@string/pay_fail" />

        <TextView
            android:id="@+id/text_fail_reason"
            style="@style/textStyleSeconderColor"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_balance" />

        <Button
            android:id="@+id/button_sure"
            android:layout_width="267dp"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/size_dp_20"
            android:layout_marginTop="150dp"
            android:background="@drawable/button_red_selector"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="@dimen/size_sp_14" />
    </LinearLayout>
</layout>