<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="@dimen/size_dp_300"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@mipmap/win_price" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/textStyleSeconderColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_price" />

        <TextView
            android:id="@+id/text_award_type"
            style="@style/textStyleSeconderColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_dp_8"
            android:text="特等奖"
            android:textColor="@color/main_selected_color"
            android:textSize="@dimen/size_sp_30" />

        <TextView
            style="@style/textStyleSeconderColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_dp_8"
            android:text="@string/current_bonus" />

        <TextView
            android:id="@+id/text_price_amount"
            style="@style/textStyleMainColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_dp_8"
            android:text="10000 XCoin"
            android:textSize="@dimen/size_sp_20" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_sure"
        style="@style/textStyleWhiteColor"
        android:layout_width="@dimen/size_dp_200"
        android:layout_height="@dimen/size_dp_44"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp"
        android:background="@drawable/red_round_shape"
        android:gravity="center"
        android:text="@string/sure" />
</RelativeLayout>