<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textStyleMainColor"
            android:layout_centerInParent="true"
            android:text="@string/sure_pay" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image_close"
            android:layout_width="@dimen/size_dp_48"
            android:layout_height="@dimen/size_dp_48"
            android:layout_alignParentRight="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/size_sp_6"
            android:scaleType="center"
            android:src="@drawable/ic_close_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:layout_alignParentBottom="true"
            android:background="@color/text_hint_color" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyleMainColor"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/size_dp_30"
        android:layout_gravity="center_horizontal"
        android:text="100 XCoin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_dp_30"
        android:paddingLeft="@dimen/size_dp_16"
        android:paddingRight="@dimen/size_dp_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textStyleMainColor"
            android:text="@string/text_product_information" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textStyleMainColor"
            android:layout_alignParentRight="true"
            android:text="@string/text_product_information" />
    </RelativeLayout>


    <TextView
        android:id="@+id/button_sure"
        android:layout_width="260dp"
        android:layout_height="@dimen/size_dp_44"
        style="@style/textStyleWhiteColor"
        android:gravity="center"
        android:layout_marginBottom="@dimen/size_dp_30"
        android:layout_marginTop="@dimen/size_dp_80"
        android:text="@string/sure"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/red_round_shape"/>
</LinearLayout>