<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="match_parent"
            android:src="@mipmap/mine_coin_bg"
            android:scaleType="fitXY"
            android:layout_height="match_parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/size_dp_14"
            android:layout_marginRight="@dimen/size_dp_14"
            app:cardCornerRadius="@dimen/size_dp_8"
            app:cardBackgroundColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    style="@style/textStyleMainColor"
                    android:layout_marginTop="@dimen/size_dp_10"
                    android:text="@string/mine_stone"/>
                <TextView
                    style="@style/textStyleMainColor"
                    android:textSize="@dimen/size_sp_40"
                    android:textColor="@color/main_selected_color"
                    android:text="123.13"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_rocket_icon"/>
                    <TextView
                        android:id="@+id/text_factor"
                        style="@style/textStyleSeconderColor"
                        android:text="@string/velocity_factor"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/text_accelerate"
                    android:layout_width="@dimen/size_dp_120"
                    android:layout_height="@dimen/size_dp_30"
                    style="@style/textStyleSeconderColor"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/size_dp_14"
                    android:textColor="@color/main_selected_color"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/accelerate"
                    android:background="@drawable/red_round_shape_stroke"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_mine_icon"
            android:layout_marginBottom="@dimen/size_dp_12"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/card"/>
    </RelativeLayout>
</layout>